# dotfiles

./: .gitignore  README.md  bootstrap
fastfetch/.config/fastfetch/: ;  config.jsonc  config_orig.jsonc
git/: .gitconfig
kitty/.config/kitty/: kitty.conf
nvim/.config/go/telemetry/local/: asm@go1.26.4-go1.26.4-linux-amd64-2026-07-03.v1.count  cgo@go1.26.4-go1.26.4-linux-amd64-2026-07-03.v1.count  compile@go1.26.4-go1.26.4-linux-amd64-2026-07-03.v1.count  go@go1.26.4-go1.26.4-linux-amd64-2026-07-03.v1.count  link@go1.26.4-go1.26.4-linux-amd64-2026-07-03.v1.count
nvim/.config/nvim/: init.lua  lazy-lock.json
nvim/.config/nvim/lua/: community.lua  polish.lua
nvim/.config/nvim/lua/plugins/: codex.lua  options.lua
py_libs/.envs/: pyproject.toml  requirements.txt
xonsh/.config/xonsh/: inputrc  rc.xsh  starship_right.toml  starship_xonsh.toml
xonsh/.config/xonsh/xshrc/: auto_activate_virtualenv.xsh
zellij/: config.kdl
zellij/.config/zellij/: config.kdl
