[project]
name = "dev"
version = "1.0.1"
description = "Primary Python development environment for Xonsh and related command-line tooling."
requires-python = " >= 3.14"
dependencies = []

[dependency-groups]
dev = [
    # Xonsh & dependencies
    # -------------------------------------
    "xonsh >= 0.24",
    "xonsh-autoxsh >= 0.3",
    "xonsh-direnv >= 1.6",

    # xontribs
    "xontrib-argcomplete >= 0.3",
    "xontrib-back2dir >= 0.1",
    "xontrib-clp >= 0.1",
    "xontrib-cmd-durations >= 0.3",
    "xontrib-fzf-completions >= 0.0.2",
    "xontrib-history-encrypt >= 0.0.9",
    "xontrib-kitty >= 0.0.2",
    "xontrib-output-search >= 0.6",
    "xontrib-pipeliner >= 0.5",
    "xontrib-prompt-starship >= 0.3",
    "xontrib-sh >= 0.3",

    # Command Line & Terminal Tools
    # -------------------------------------
    "click >= 8.4",
    "invoke >= 3.0",
    "loguru >= 0.6",
    "notify-py >= 0.3.43",
    "psutil >= 7.2",
    "pyperclip >= 1.11",
    "rich >= 15",
    "textual >= 8.2",

    # Ansible
    # -------------------------------------
    "ansible >= 13.7",

    # Python Development Tools
    # -------------------------------------
    "basedpyright >= 1.39",
    "ipython >= 9.14",
    "nodejs-wheel-binaries >= 24.15",
    "pylint >= 4.0", 
    "pyrefly >= 1.1", 
    "ruff >= 0.15",
    "tokenize-output >= 0.4",
    "ty >= 0.0.56",

    # Other
    # -------------------------------------
    "demjson3 >= 3.0",
    "distro >= 1.9",
    "packaging >= 26.2",
    "ujson >= 5.12",
]

[tool.uv]
package = false
